Blender 2.8 Crashes when I click on undo and redo while working with image or image empty #57889

Closed
opened 2018-11-17 09:36:11 +01:00 by Judah King · 19 comments

System Information
Windows 10 Pro 64Bit
Intel(R) Core(TM) i3-4005U CPU @ 1.70GHz, Intel® HD Graphics 4400 (Integrated)
8 GB RAM
Geforce nvidia 820m 2GB (Discrete GPU)
system-info.txt

Blender Version
Broken: Blender 2.80.31 2c347ebbba
Worked: (optional)

Short description of error
Blender Crashes When I click on undo and redo while working with image or image empty.

Exact steps for others to reproduce the error

  1. Opened Blender
  2. Added an Image from Add Menu, Add > Image or Add > Empty > Image
  3. Scaled the Image
  4. Then I clicked "Ctrl + Z = undo, Ctrl + Shift + Z = redo"
  5. Blender crashed
    Here is the blend file.
    Burger.blend

Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Windows 10 Pro 64Bit Intel(R) Core(TM) i3-4005U CPU @ 1.70GHz, Intel® HD Graphics 4400 (Integrated) 8 GB RAM Geforce nvidia 820m 2GB (Discrete GPU) [system-info.txt](https://archive.blender.org/developer/F5598241/system-info.txt) **Blender Version** Broken: Blender 2.80.31 2c347ebbba9 Worked: (optional) **Short description of error** Blender Crashes When I click on undo and redo while working with image or image empty. **Exact steps for others to reproduce the error** 1. Opened Blender 2. Added an Image from Add Menu, Add > Image or Add > Empty > Image 3. Scaled the Image 4. Then I clicked "Ctrl + Z = undo, Ctrl + Shift + Z = redo" 5. Blender crashed Here is the blend file. [Burger.blend](https://archive.blender.org/developer/F5598214/Burger.blend) Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Added subscriber: @JoeRex

Added subscriber: @JoeRex

#57943 was marked as duplicate of this issue

#57943 was marked as duplicate of this issue

#57942 was marked as duplicate of this issue

#57942 was marked as duplicate of this issue

#57882 was marked as duplicate of this issue

#57882 was marked as duplicate of this issue

#57916 was marked as duplicate of this issue

#57916 was marked as duplicate of this issue

#57899 was marked as duplicate of this issue

#57899 was marked as duplicate of this issue

#57886 was marked as duplicate of this issue

#57886 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

I can reproduce this crash consistently, yes.

I can reproduce this crash consistently, yes.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-19 09:57:12 +01:00
Member

Can confirm, getting

add_relation(Eval Order) - Could not find op_from (OperationKey(type: COPY_ON_WRITE, component name: '', operation code: COPY_ON_WRITE))
add_relation(Eval Order) - Failed, but op_to (OperationKey(type: COPY_ON_WRITE, component name: '', operation code: COPY_ON_WRITE)) was ok

looks like it's caused by 33ac6c25b9, add_relation returns NULL, just checking for that survives (see P825)

backtrace when doing the redo steps provided:

1  DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2496 0x2f09881 
2  DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2342 0x2f09333 
3  DEG_graph_build_from_view_layer                              depsgraph_build.cc       259  0x2ee655c 
4  DEG_graph_relations_update                                   depsgraph_build.cc       320  0x2ee6763 
5  BKE_scene_graph_update_tagged                                scene.c                  1419 0x2b5f29e 
6  wm_event_do_depsgraph                                        wm_event_system.c        334  0x1c4941c 
7  wm_event_do_refresh_wm_and_depsgraph                         wm_event_system.c        359  0x1c49501 

backtrace when opening provided file:

1   DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2496 0x2f09881 
2   DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2342 0x2f09333 
3   DEG_graph_build_from_view_layer                              depsgraph_build.cc       259  0x2ee655c 
4   DEG_graph_relations_update                                   depsgraph_build.cc       320  0x2ee6763 
5   BKE_scene_graph_update_tagged                                scene.c                  1419 0x2b5f29e 
6   wm_event_do_depsgraph                                        wm_event_system.c        334  0x1c4941c 
7   wm_file_read_post                                            wm_files.c               492  0x1c549b3 
8   WM_file_read                                                 wm_files.c               633  0x1c54d73 
9   wm_file_read_opwrap                                          wm_files.c               1821 0x1c5784c 
10  wm_open_mainfile_exec                                        wm_files.c               1881 0x1c57aad      
Can confirm, getting ``` add_relation(Eval Order) - Could not find op_from (OperationKey(type: COPY_ON_WRITE, component name: '', operation code: COPY_ON_WRITE)) add_relation(Eval Order) - Failed, but op_to (OperationKey(type: COPY_ON_WRITE, component name: '', operation code: COPY_ON_WRITE)) was ok ``` looks like it's caused by 33ac6c25b9, add_relation returns NULL, just checking for that survives (see [P825](https://archive.blender.org/developer/P825.txt)) backtrace when doing the redo steps provided: ``` 1 DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2496 0x2f09881 2 DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2342 0x2f09333 3 DEG_graph_build_from_view_layer depsgraph_build.cc 259 0x2ee655c 4 DEG_graph_relations_update depsgraph_build.cc 320 0x2ee6763 5 BKE_scene_graph_update_tagged scene.c 1419 0x2b5f29e 6 wm_event_do_depsgraph wm_event_system.c 334 0x1c4941c 7 wm_event_do_refresh_wm_and_depsgraph wm_event_system.c 359 0x1c49501 ``` backtrace when opening provided file: ``` 1 DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2496 0x2f09881 2 DEG::DepsgraphRelationBuilder::build_copy_on_write_relations deg_builder_relations.cc 2342 0x2f09333 3 DEG_graph_build_from_view_layer depsgraph_build.cc 259 0x2ee655c 4 DEG_graph_relations_update depsgraph_build.cc 320 0x2ee6763 5 BKE_scene_graph_update_tagged scene.c 1419 0x2b5f29e 6 wm_event_do_depsgraph wm_event_system.c 334 0x1c4941c 7 wm_file_read_post wm_files.c 492 0x1c549b3 8 WM_file_read wm_files.c 633 0x1c54d73 9 wm_file_read_opwrap wm_files.c 1821 0x1c5784c 10 wm_open_mainfile_exec wm_files.c 1881 0x1c57aad ```
Member

Added subscriber: @candreacchio

Added subscriber: @candreacchio

This issue was referenced by b0c463a274

This issue was referenced by b0c463a274564b82aa1a76659911dbe2780c0a17

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @Blendork, @JJL3DDznr

Added subscribers: @Blendork, @JJL3DDznr

Added subscriber: @sujith_ta

Added subscriber: @sujith_ta

Added subscribers: @MALY, @ChristianMoravec

Added subscribers: @MALY, @ChristianMoravec

Added subscribers: @theDude, @ThinkingPolygons

Added subscribers: @theDude, @ThinkingPolygons

Added subscriber: @user1

Added subscriber: @user1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57889
No description provided.