Fix T57889: Crashes on undo and redo while working with image or image empty